--- a/apps/add_rows_to_db.ipynb
+++ b/apps/add_rows_to_db.ipynb
@@ -2,28 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "from apps.authentication.models import Users,Patient,Contact,ContactsTime,Event\n",
     "from apps import db"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
-   "source": [
-    "from sqlalchemy import create_engine\n",
-    "from sqlalchemy.orm import sessionmaker\n",
-    "e = 'mysql+pymysql://naya:NayaPass1!@35.226.141.122/temi_v3'\n",
-    "engine = create_engine(e)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -46,7 +29,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[('time', '00:00:00'),\n ('time', '00:30:00'),\n ('time', '01:00:00'),\n ('time', '01:30:00'),\n ('time', '02:00:00'),\n ('time', '02:30:00'),\n ('time', '03:00:00'),\n ('time', '03:30:00'),\n ('time', '04:00:00'),\n ('time', '04:30:00'),\n ('time', '05:00:00'),\n ('time', '05:30:00'),\n ('time', '06:00:00'),\n ('time', '06:30:00'),\n ('time', '07:00:00'),\n ('time', '07:30:00'),\n ('time', '08:00:00'),\n ('time', '08:30:00'),\n ('time', '09:00:00'),\n ('time', '09:30:00'),\n ('time', '10:00:00'),\n ('time', '10:30:00'),\n ('time', '11:00:00'),\n ('time', '11:30:00'),\n ('time', '12:00:00'),\n ('time', '12:30:00'),\n ('time', '13:00:00'),\n ('time', '13:30:00'),\n ('time', '14:00:00'),\n ('time', '14:30:00'),\n ('time', '15:00:00'),\n ('time', '15:30:00'),\n ('time', '16:00:00'),\n ('time', '16:30:00'),\n ('time', '17:00:00'),\n ('time', '17:30:00'),\n ('time', '18:00:00'),\n ('time', '18:30:00'),\n ('time', '19:00:00'),\n ('time', '19:30:00'),\n ('time', '20:00:00'),\n ('time', '20:30:00'),\n ('time', '21:00:00'),\n ('time', '21:30:00'),\n ('time', '22:00:00'),\n ('time', '22:30:00'),\n ('time', '23:00:00'),\n ('time', '23:30:00')]"
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_times_list():\n",
+    "    times = []\n",
+    "    for hour in range(24):\n",
+    "        for minute in range(0, 60, 30):\n",
+    "            times.append('{:02d}:{:02d}:00'.format(hour, minute))\n",
+    "    times = [(\"time\",value) for value in times]\n",
+    "    return times\n",
+    "get_times_list()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy.orm import sessionmaker\n",
+    "e = 'mysql+pymysql://naya:NayaPass1!@35.226.141.122/temi_v3'\n",
+    "engine = create_engine(e)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "from sqlalchemy.orm import Session\n",
@@ -72,11 +102,21 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_11056\\289867300.py:2: SAWarning: relationship 'Contact.contact' will copy column contacts.contact_id to column contacts_times.contact_id, which conflicts with relationship(s): 'Contact.contacts_times' (copies contacts.contact_id to contacts_times.contact_id), 'ContactsTime.contact' (copies contacts.contact_id to contacts_times.contact_id). If this is not the intention, consider if these relationships should be linked with back_populates, or if viewonly=True should be applied to one or more if they are read-only. For the less common case that foreign key constraints are partially overlapping, the orm.foreign() annotation can be used to isolate the columns that should be written towards.   To silence this warning, add the parameter 'overlaps=\"contact,contacts_times\"' to the 'Contact.contact' relationship. (Background on this error at: https://sqlalche.me/e/14/qzyx)\n",
+      "  p = session.query(Patient).filter_by(patient_id=2).first()\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_11056\\289867300.py:2: SAWarning: relationship 'ContactsTime.contacts' will copy column contacts.contact_id to column contacts_times.contact_id, which conflicts with relationship(s): 'Contact.contacts_times' (copies contacts.contact_id to contacts_times.contact_id), 'ContactsTime.contact' (copies contacts.contact_id to contacts_times.contact_id). If this is not the intention, consider if these relationships should be linked with back_populates, or if viewonly=True should be applied to one or more if they are read-only. For the less common case that foreign key constraints are partially overlapping, the orm.foreign() annotation can be used to isolate the columns that should be written towards.   To silence this warning, add the parameter 'overlaps=\"contact,contacts_times\"' to the 'ContactsTime.contacts' relationship. (Background on this error at: https://sqlalche.me/e/14/qzyx)\n",
+      "  p = session.query(Patient).filter_by(patient_id=2).first()\n"
+     ]
+    }
+   ],
    "source": [
     "# p = Patient.query.filter_by(patient_id=2)\n",
-    "p = session.query(Patient).filter_by(patient_id=2)\n",
-    "patient = p.all()"
+    "p = session.query(Patient).filter_by(patient_id=2).first()\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -87,9 +127,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [],
-   "source": [],
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "list"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_times_list():\n",
+    "    times = []\n",
+    "    for hour in range(24):\n",
+    "        for minute in range(0, 60, 30):\n",
+    "            times.append('{:02d}:{:02d}:00'.format(hour, minute))\n",
+    "    times = [(\"time\",value) for value in times]\n",
+    "    return times\n",
+    "type(get_times_list())"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -99,7 +157,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[ContactsTime(contact_id='29', day='4', _from='10:00:00', to='14:00:00'),\n ContactsTime(contact_id='29', day='2', _from='10:00:00', to='14:00:00'),\n ContactsTime(contact_id='29', day='3', _from='10:00:00', to='14:00:00')]"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.contacts[0].contacts_times"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# for contact in p.contacts:\n",
+    "#     for time in contact.contacts_times:\n",
+    "#         print(time.day)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'contacts'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [9]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mpatient\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcontacts\u001B[49m\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'list' object has no attribute 'contacts'"
+     ]
+    }
+   ],
+   "source": [
+    "patient.contacts"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "contacts = session.query(Contact).filter_by(patient_id =2).all()\n",
@@ -114,19 +251,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "outputs": [
     {
-     "data": {
-      "text/plain": "[ContactsTime(contact_id='29', day='4', _from='10:00:00', to='14:00:00'),\n ContactsTime(contact_id='29', day='2', _from='10:00:00', to='14:00:00'),\n ContactsTime(contact_id='29', day='3', _from='10:00:00', to='14:00:00')]"
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "2\n",
+      "3\n"
+     ]
     }
    ],
    "source": [
-    "contacts[0].contacts_times.day"
+    "for contact in contacts:\n",
+    "    for time in contact.contacts_times:\n",
+    "        print(time.day)\n",
+    "    # print(contact.contact_id)"
    ],
    "metadata": {
     "collapsed": false,
