fix patient_info page contact edit and del contact modals , need to add new contact modal and times modals

--- a/apps/add_rows_to_db.ipynb
+++ b/apps/add_rows_to_db.ipynb
@@ -5,7 +5,7 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "from apps.authentication.models import Users,Patient,Contact,ContactsTime,Event\n",
+    "from apps.authentication.models import Users,Patient,Contact,ContactTime,Event\n",
     "from apps import db"
    ],
    "metadata": {
@@ -19,7 +19,23 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "d = dict({\n",
+    "    \"1\": \"ראשון\",\n",
+    "    \"2\": \"שני\",\n",
+    "    \"3\": \"שלישי\",\n",
+    "    \"4\": \"רביעי\",\n",
+    "    \"5\": \"חמישי\",\n",
+    "    \"6\": \"שישי\",\n",
+    "    \"7\": \"שבת\"\n",
+    "})\n",
+    "\n",
+    "l = [(key,value) for (key,value) in d.items()]\n",
+    "l1 = [(key,value,\"\") for (key,value) in d.items()]\n",
+    "# l1\n",
+    "l1[1] = ('selected', 'שני', '2')\n",
+    "l1"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -418,16 +434,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# Add contacts times\n",
-    "c1 = ContactsTime(29,4,\"10:00\",\"14:00\")\n",
-    "c2 = ContactsTime(29,2,\"10:00\",\"14:00\")\n",
-    "c3 = ContactsTime(29,3,\"10:00\",\"14:00\")\n",
-    "c4 = ContactsTime(30,4,\"10:00\",\"14:00\")\n",
-    "c5 = ContactsTime(30,2,\"10:00\",\"14:00\")\n",
-    "c6 = ContactsTime(30,3,\"10:00\",\"14:00\")\n",
+    "c1 = ContactTime(13,2,\"10:00\",\"14:00\")\n",
+    "c2 = ContactTime(13,2,\"10:00\",\"14:00\")\n",
+    "c3 = ContactTime(13,3,\"10:00\",\"14:00\")\n",
+    "c4 = ContactTime(15,4,\"10:00\",\"14:00\")\n",
+    "c5 = ContactTime(15,2,\"10:00\",\"14:00\")\n",
+    "c6 = ContactTime(15,3,\"10:00\",\"14:00\")\n",
     "session.add_all([c1,c2,c3,c4,c5,c6])\n",
     "session.commit()"
    ],
