add test py file with cls

--- a/apps/core/add_rows_to_db.ipynb
+++ b/apps/core/add_rows_to_db.ipynb
@@ -1185,10 +1185,6 @@
    "outputs": [],
    "source": [
     "events = get_df(Event)\n",
-    "def get_next_events(cls,value,event_status=None):\n",
-    "    events = get_df(Event)\n",
-    "    if(event_status):return events[(events[cls.__mapper__.primary_key[0].name] == value) & (events.status == event_status)]\n",
-    "    return events[(events[cls.__mapper__.primary_key[0].name] == value)]\n",
     "\n",
     "\n",
     "df = get_next_events(Patient,100001,0)"
@@ -1202,14 +1198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 155,
    "outputs": [
     {
      "data": {
-      "text/plain": "   contact_id next_week_day           from_date             to_date\n0          13             1 2022-09-19 08:00:00 2022-09-19 10:00:00\n1          13             1 2022-09-19 09:00:00 2022-09-19 14:00:00\n2          13             1 2022-09-19 12:00:00 2022-09-19 18:00:00\n3          13             2 2022-09-20 09:00:00 2022-09-20 15:00:00\n4          13             2 2022-09-20 10:00:00 2022-09-20 12:00:00\n5          13             2 2022-09-20 23:30:00 2022-09-20 23:30:00\n6          13             2 2022-09-20 23:30:00 2022-09-20 23:30:00\n7          13             6 2022-09-17 02:30:00 2022-09-17 06:30:00",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>contact_id</th>\n      <th>next_week_day</th>\n      <th>from_date</th>\n      <th>to_date</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>13</td>\n      <td>1</td>\n      <td>2022-09-19 08:00:00</td>\n      <td>2022-09-19 10:00:00</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>13</td>\n      <td>1</td>\n      <td>2022-09-19 09:00:00</td>\n      <td>2022-09-19 14:00:00</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>13</td>\n      <td>1</td>\n      <td>2022-09-19 12:00:00</td>\n      <td>2022-09-19 18:00:00</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>13</td>\n      <td>2</td>\n      <td>2022-09-20 09:00:00</td>\n      <td>2022-09-20 15:00:00</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>13</td>\n      <td>2</td>\n      <td>2022-09-20 10:00:00</td>\n      <td>2022-09-20 12:00:00</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>13</td>\n      <td>2</td>\n      <td>2022-09-20 23:30:00</td>\n      <td>2022-09-20 23:30:00</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>13</td>\n      <td>2</td>\n      <td>2022-09-20 23:30:00</td>\n      <td>2022-09-20 23:30:00</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>13</td>\n      <td>6</td>\n      <td>2022-09-17 02:30:00</td>\n      <td>2022-09-17 06:30:00</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "            start_time\n0  2022-09-21 11:00:00\n1  2022-09-21 11:20:00\n2  2022-09-21 11:40:00\n3  2022-09-21 12:00:00\n4  2022-09-21 12:20:00\n..                 ...\n8  2022-09-17 05:10:00\n9  2022-09-17 05:30:00\n10 2022-09-17 05:50:00\n11 2022-09-17 06:10:00\n12 2022-09-17 06:30:00\n\n[275 rows x 1 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>start_time</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2022-09-21 11:00:00</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2022-09-21 11:20:00</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2022-09-21 11:40:00</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2022-09-21 12:00:00</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2022-09-21 12:20:00</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>2022-09-17 05:10:00</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>2022-09-17 05:30:00</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>2022-09-17 05:50:00</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>2022-09-17 06:10:00</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>2022-09-17 06:30:00</td>\n    </tr>\n  </tbody>\n</table>\n<p>275 rows × 1 columns</p>\n</div>"
      },
-     "execution_count": 106,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,15 +1216,78 @@
     "df = get_df(ContactTime)\n",
     "df = df[df.contact_id == 13]\n",
     "\n",
+    "def get_next_events(cls,value,event_status=None):\n",
+    "    \"\"\"\n",
+    "    The function return next evetns for cls (Patient,Contact,Dept)\n",
+    "    \"\"\"\n",
+    "    events = get_df(Event)\n",
+    "    if(event_status):return events[(events[cls.__mapper__.primary_key[0].name] == value) & (events.status == event_status)]\n",
+    "    return events[(events[cls.__mapper__.primary_key[0].name] == value)]\n",
+    "\n",
+    "\n",
     "def transform_time_df(cls,next_days_num):\n",
-    "    df = get_df(cls.__name__ + 'Time')\n",
+    "    \"\"\"\n",
+    "    The function get cls and return cls_time with next days dates\n",
+    "    \"\"\"\n",
+    "    # Get cls Time table\n",
+    "    df = get_df(eval(cls.__name__ + 'Time'))\n",
     "    df = U.convert_time_cols_to_time_delta(df, ['from_hour', 'to_hour'])\n",
+    "    temp_df = U.get_next_days_dates(next_days_num)\n",
+    "    df = df.merge(temp_df ,how='inner')\n",
+    "    df['from_date'] = df['from_hour'] + df['next_week_date']\n",
+    "    df['to_date'] = df['to_hour'] + df['next_week_date']\n",
+    "    df.drop(columns=[\"from_hour\",\"to_hour\",\"day\",\"next_week_date\"],inplace=True)\n",
+    "    return df\n",
+    "\n",
+    "def get_df_time_slots(cls,freq,next_days_num):\n",
+    "    \"\"\"\n",
+    "    :param df: df with from_dates and to_dates per cls\n",
+    "    :param freq: freq for slot return df\n",
+    "    :return: slote df from min datetime until max datetime with freq got\n",
+    "    \"\"\"\n",
+    "    df = transform_time_df(cls,next_days_num)\n",
+    "    freq = str(freq) + \"min\"\n",
+    "    return pd.concat([pd.DataFrame({\\\n",
+    "                'start_time': U.get_date_range(start=row['from_date'],end=row[\"to_date\"],freq=freq)})\\\n",
+    "                for index,row in df.iterrows()])\n",
+    "    return df\n",
+    "#\n",
+    "# def get_df_free_time_slots(cls):\n",
+    "#     events = get_next_events(Contact,0)\n",
+    "#     transform_time_df(events,)\n",
+    "#\n",
+    "\n",
     "# df = U.concact_time_cols_and_date(df,7)\n",
-    "temp_df = U.get_next_days_dates(7)\n",
-    "df = df.merge(temp_df ,how='inner')\n",
-    "df['from_date'] = df['from_hour'] + df['next_week_date']\n",
-    "df['to_date'] = df['to_hour'] + df['next_week_date']\n",
-    "df.drop(columns=[\"from_hour\",\"to_hour\",\"day\",\"next_week_date\"],inplace=True)\n",
+    "df = get_df_time_slots(Contact,20,7)\n",
+    "df\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "            start_time\n0  2022-09-21 11:00:00\n1  2022-09-21 11:20:00\n2  2022-09-21 11:40:00\n3  2022-09-21 12:00:00\n4  2022-09-21 12:20:00\n..                 ...\n8  2022-09-17 05:10:00\n9  2022-09-17 05:30:00\n10 2022-09-17 05:50:00\n11 2022-09-17 06:10:00\n12 2022-09-17 06:30:00\n\n[275 rows x 1 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>start_time</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2022-09-21 11:00:00</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2022-09-21 11:20:00</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2022-09-21 11:40:00</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2022-09-21 12:00:00</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2022-09-21 12:20:00</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>2022-09-17 05:10:00</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>2022-09-17 05:30:00</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>2022-09-17 05:50:00</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>2022-09-17 06:10:00</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>2022-09-17 06:30:00</td>\n    </tr>\n  </tbody>\n</table>\n<p>275 rows × 1 columns</p>\n</div>"
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "def get_df_time_free_slots()\n",
+    "df = get_df_time_slots(df,20)\n",
     "df"
    ],
    "metadata": {
@@ -1240,23 +1299,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 143,
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute '__module__'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [129]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m Contact\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__name__\u001B[39m \u001B[38;5;241m+\u001B[39m \u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mTime\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[38;5;18;43m__module__\u001B[39;49m\n",
-      "\u001B[1;31mAttributeError\u001B[0m: 'str' object has no attribute '__module__'"
-     ]
+     "data": {
+      "text/plain": "    day  contact_id   to_hour from_hour\nid                                     \n24    2          13  10:00:00  08:00:00\n25    3          13  15:00:00  09:00:00\n29    2          13  14:00:00  09:00:00\n30    2          13  18:00:00  12:00:00\n31    3          13  12:00:00  10:00:00\n35    3          13  23:30:00  23:30:00\n36    3          13  23:30:00  23:30:00\n37    7          13  06:30:00  02:30:00",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>day</th>\n      <th>contact_id</th>\n      <th>to_hour</th>\n      <th>from_hour</th>\n    </tr>\n    <tr>\n      <th>id</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>24</th>\n      <td>2</td>\n      <td>13</td>\n      <td>10:00:00</td>\n      <td>08:00:00</td>\n    </tr>\n    <tr>\n      <th>25</th>\n      <td>3</td>\n      <td>13</td>\n      <td>15:00:00</td>\n      <td>09:00:00</td>\n    </tr>\n    <tr>\n      <th>29</th>\n      <td>2</td>\n      <td>13</td>\n      <td>14:00:00</td>\n      <td>09:00:00</td>\n    </tr>\n    <tr>\n      <th>30</th>\n      <td>2</td>\n      <td>13</td>\n      <td>18:00:00</td>\n      <td>12:00:00</td>\n    </tr>\n    <tr>\n      <th>31</th>\n      <td>3</td>\n      <td>13</td>\n      <td>12:00:00</td>\n      <td>10:00:00</td>\n    </tr>\n    <tr>\n      <th>35</th>\n      <td>3</td>\n      <td>13</td>\n      <td>23:30:00</td>\n      <td>23:30:00</td>\n    </tr>\n    <tr>\n      <th>36</th>\n      <td>3</td>\n      <td>13</td>\n      <td>23:30:00</td>\n      <td>23:30:00</td>\n    </tr>\n    <tr>\n      <th>37</th>\n      <td>7</td>\n      <td>13</td>\n      <td>06:30:00</td>\n      <td>02:30:00</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "Contact.__name__ + 'Time'"
+    "df"
    ],
    "metadata": {
     "collapsed": false,
@@ -1267,23 +1323,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 136,
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute '__tablename__'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [114]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m df \u001B[38;5;241m=\u001B[39m \u001B[43mget_df\u001B[49m\u001B[43m(\u001B[49m\u001B[43mContact\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[38;5;18;43m__name__\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;241;43m+\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mTime\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "Input \u001B[1;32mIn [68]\u001B[0m, in \u001B[0;36mget_df\u001B[1;34m(cls)\u001B[0m\n\u001B[0;32m     18\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mget_df\u001B[39m(\u001B[38;5;28mcls\u001B[39m):\n\u001B[0;32m     19\u001B[0m     \u001B[38;5;66;03m# SQLAlCHEMY ORM QUERY TO FETCH ALL RECORDS\u001B[39;00m\n\u001B[1;32m---> 20\u001B[0m     df \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mread_sql_table(\u001B[38;5;28;43mcls\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m__tablename__\u001B[49m,con\u001B[38;5;241m=\u001B[39mengine,index_col\u001B[38;5;241m=\u001B[39m\u001B[38;5;28mcls\u001B[39m\u001B[38;5;241m.\u001B[39m__mapper__\u001B[38;5;241m.\u001B[39mprimary_key[\u001B[38;5;241m0\u001B[39m]\u001B[38;5;241m.\u001B[39mname\n\u001B[0;32m     21\u001B[0m     )\n\u001B[0;32m     22\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m df\n",
-      "\u001B[1;31mAttributeError\u001B[0m: 'str' object has no attribute '__tablename__'"
-     ]
+     "data": {
+      "text/plain": "    day  contact_id   to_hour from_hour\nid                                     \n11    4          30  14:00:00  11:00:00\n12    2          30  13:00:00  10:00:00\n13    3          30  15:00:00  09:00:00\n17    6          29  13:00:00  09:00:00\n18    3          29  12:00:00  10:00:00\n19    4          29  17:00:00  12:00:00\n20    6          29  14:00:00  09:00:00\n21    6          29  13:00:00  10:00:00\n22    2          29  15:00:00  09:00:00\n24    2          13  10:00:00  08:00:00\n25    3          13  15:00:00  09:00:00\n27    2          15  15:00:00  09:00:00\n28    3          15  10:00:00  08:00:00\n29    2          13  14:00:00  09:00:00\n30    2          13  18:00:00  12:00:00\n31    3          13  12:00:00  10:00:00\n32    4          15  14:00:00  09:00:00\n33    2          15  18:00:00  12:00:00\n34    3          15  12:00:00  10:00:00\n35    3          13  23:30:00  23:30:00\n36    3          13  23:30:00  23:30:00\n37    7          13  06:30:00  02:30:00\n39    3          20  03:00:00  02:00:00",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>day</th>\n      <th>contact_id</th>\n      <th>to_hour</th>\n      <th>from_hour</th>\n    </tr>\n    <tr>\n      <th>id</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>11</th>\n      <td>4</td>\n      <td>30</td>\n      <td>14:00:00</td>\n      <td>11:00:00</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>2</td>\n      <td>30</td>\n      <td>13:00:00</td>\n      <td>10:00:00</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>3</td>\n      <td>30</td>\n      <td>15:00:00</td>\n      <td>09:00:00</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>6</td>\n      <td>29</td>\n      <td>13:00:00</td>\n      <td>09:00:00</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>3</td>\n      <td>29</td>\n      <td>12:00:00</td>\n      <td>10:00:00</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>4</td>\n      <td>29</td>\n      <td>17:00:00</td>\n      <td>12:00:00</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>6</td>\n      <td>29</td>\n      <td>14:00:00</td>\n      <td>09:00:00</td>\n    </tr>\n    <tr>\n      <th>21</th>\n      <td>6</td>\n      <td>29</td>\n      <td>13:00:00</td>\n      <td>10:00:00</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>2</td>\n      <td>29</td>\n      <td>15:00:00</td>\n      <td>09:00:00</td>\n    </tr>\n    <tr>\n      <th>24</th>\n      <td>2</td>\n      <td>13</td>\n      <td>10:00:00</td>\n      <td>08:00:00</td>\n    </tr>\n    <tr>\n      <th>25</th>\n      <td>3</td>\n      <td>13</td>\n      <td>15:00:00</td>\n      <td>09:00:00</td>\n    </tr>\n    <tr>\n      <th>27</th>\n      <td>2</td>\n      <td>15</td>\n      <td>15:00:00</td>\n      <td>09:00:00</td>\n    </tr>\n    <tr>\n      <th>28</th>\n      <td>3</td>\n      <td>15</td>\n      <td>10:00:00</td>\n      <td>08:00:00</td>\n    </tr>\n    <tr>\n      <th>29</th>\n      <td>2</td>\n      <td>13</td>\n      <td>14:00:00</td>\n      <td>09:00:00</td>\n    </tr>\n    <tr>\n      <th>30</th>\n      <td>2</td>\n      <td>13</td>\n      <td>18:00:00</td>\n      <td>12:00:00</td>\n    </tr>\n    <tr>\n      <th>31</th>\n      <td>3</td>\n      <td>13</td>\n      <td>12:00:00</td>\n      <td>10:00:00</td>\n    </tr>\n    <tr>\n      <th>32</th>\n      <td>4</td>\n      <td>15</td>\n      <td>14:00:00</td>\n      <td>09:00:00</td>\n    </tr>\n    <tr>\n      <th>33</th>\n      <td>2</td>\n      <td>15</td>\n      <td>18:00:00</td>\n      <td>12:00:00</td>\n    </tr>\n    <tr>\n      <th>34</th>\n      <td>3</td>\n      <td>15</td>\n      <td>12:00:00</td>\n      <td>10:00:00</td>\n    </tr>\n    <tr>\n      <th>35</th>\n      <td>3</td>\n      <td>13</td>\n      <td>23:30:00</td>\n      <td>23:30:00</td>\n    </tr>\n    <tr>\n      <th>36</th>\n      <td>3</td>\n      <td>13</td>\n      <td>23:30:00</td>\n      <td>23:30:00</td>\n    </tr>\n    <tr>\n      <th>37</th>\n      <td>7</td>\n      <td>13</td>\n      <td>06:30:00</td>\n      <td>02:30:00</td>\n    </tr>\n    <tr>\n      <th>39</th>\n      <td>3</td>\n      <td>20</td>\n      <td>03:00:00</td>\n      <td>02:00:00</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = get_df(Contact.__name__ + 'Time')"
+    "df = get_df(eval(Contact.__name__ + 'Time'))\n",
+    "df"
    ],
    "metadata": {
     "collapsed": false,
