Add patient check max calls and done with sched

--- a/apps/core/add_rows_to_db.ipynb
+++ b/apps/core/add_rows_to_db.ipynb
@@ -2392,146 +2392,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 51,
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "d = Department(1)\n",
+    "# df = d.get_next_events(filter_by={\"patient_id\":\"100001\"})\n",
+    "df = d.patients\n",
+    " # d.patients[d.patients[patient_id==100001],'max_calls']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "outputs": [
     {
      "ename": "AttributeError",
-     "evalue": "module 'utils' has no attribute 'get_engine'",
+     "evalue": "'Department' object has no attribute 'genext_events'",
      "output_type": "error",
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [187]\u001B[0m, in \u001B[0;36m<cell line: 122>\u001B[1;34m()\u001B[0m\n\u001B[0;32m    119\u001B[0m             \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m    120\u001B[0m                 \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mContact have no optional meet time\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m--> 122\u001B[0m d \u001B[38;5;241m=\u001B[39m \u001B[43mDepartment\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m    123\u001B[0m \u001B[38;5;66;03m# df = d.get_next_events(filter_by={\"patient_id\":\"100001\"})\u001B[39;00m\n\u001B[0;32m    124\u001B[0m d\u001B[38;5;241m.\u001B[39msession\n",
-      "Input \u001B[1;32mIn [187]\u001B[0m, in \u001B[0;36mDepartment.__init__\u001B[1;34m(self, department_id, session)\u001B[0m\n\u001B[0;32m     20\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__init__\u001B[39m(\u001B[38;5;28mself\u001B[39m, department_id, session\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m):\n\u001B[0;32m     21\u001B[0m     \u001B[38;5;66;03m# Create session if not get_session\u001B[39;00m\n\u001B[0;32m     22\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m session:\n\u001B[1;32m---> 23\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mengine \u001B[38;5;241m=\u001B[39m \u001B[43mU\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mget_engine\u001B[49m()\n\u001B[0;32m     24\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39msession \u001B[38;5;241m=\u001B[39m U\u001B[38;5;241m.\u001B[39mget_session(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mengine)\n\u001B[0;32m     26\u001B[0m     \u001B[38;5;66;03m# Set department_id\u001B[39;00m\n",
-      "\u001B[1;31mAttributeError\u001B[0m: module 'utils' has no attribute 'get_engine'"
+      "Input \u001B[1;32mIn [48]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43md\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mgenext_events\u001B[49m()\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'Department' object has no attribute 'genext_events'"
      ]
     }
    ],
    "source": [
-    "import re\n",
-    "\n",
-    "import pandas as pd\n",
-    "from pandas import DataFrame\n",
-    "from sqlalchemy.event import Events\n",
-    "\n",
-    "from apps.authentication.models import Users, Patient, Contact, ContactTime, Event, UserTime\n",
-    "from apps import db\n",
-    "from sqlalchemy import create_engine, text\n",
-    "from sqlalchemy.orm import sessionmaker, class_mapper\n",
-    "from datetime import datetime as dt\n",
-    "import utils as U\n",
-    "from run import app_config\n",
-    "from apps.events import functions as E\n",
-    "\n",
-    "class Department:\n",
-    "    _FREQ = 20\n",
-    "    _NEXT_DAYS_NUM = 30\n",
-    "\n",
-    "    def __init__(self, department_id, session=None):\n",
-    "        # Create session if not get_session\n",
-    "        if not session:\n",
-    "            self.engine = U.get_engine()\n",
-    "            self.session = U.get_session(self.engine)\n",
-    "\n",
-    "        # Set department_id\n",
-    "        self.department_id = department_id\n",
-    "\n",
-    "        # Set patients of department with their contacts\n",
-    "        self.patients = self.get_patients_for_dept()\n",
-    "\n",
-    "        # Set events of depertments\n",
-    "        self.next_department_events = self.get_next_events(filter_by={'department_id': self.department_id, 'status': 2})\n",
-    "\n",
-    "        # Set free slots of department\n",
-    "        try:\n",
-    "            self.department_free_slots_df = self.get_free_slots(Users, filter_by={'department_id': self.department_id})\n",
-    "        except Exception as e:\n",
-    "            raise Exception(e)\n",
-    "\n",
-    "\n",
-    "\n",
-    "        self.department_free_slots_list = None\n",
-    "\n",
-    "    def get_next_events(self, filter_by=None, event_status=None):\n",
-    "        \"\"\"\n",
-    "        The function return next events for cls (Patient,Contact,Dept)\n",
-    "        \"\"\"\n",
-    "        events = U.get_df(Event, self.session, filter_by)\n",
-    "        return events\n",
-    "\n",
-    "\n",
-    "    def get_patients_for_dept(self):\n",
-    "        \"\"\"\n",
-    "        The function get all the patients of the department and their contacts\n",
-    "        \"\"\"\n",
-    "        patients = U.get_df(Patient, self.session, filter_by={\"department_id\": self.department_id}).reset_index()\n",
-    "        contacts = U.get_df(Contact, self.session).reset_index()\n",
-    "        patients = patients.merge(contacts, on='patient_id', how='left')\n",
-    "        return patients\n",
-    "\n",
-    "    def get_free_slots(self, cls, contact_id=None, filter_by=None):\n",
-    "        \"\"\"\n",
-    "        The function get cls and filter by and return free slots of cls\n",
-    "        \"\"\"\n",
-    "        if ('users' in cls.__name__.lower()):\n",
-    "            df = U.get_df(eval(cls.__name__[:-1] + 'Time'), self.session, filter_by={'user_id': self.department_id})\n",
-    "        elif ('contact' in cls.__name__.lower()):\n",
-    "            df = U.get_df(eval(cls.__name__ + 'Time'), self.session, filter_by={'contact_id': contact_id})\n",
-    "\n",
-    "        # If df is not empty\n",
-    "        if (not df.shape): raise Exception(\"No free slots at db for cls\", format(cls.__name__))\n",
-    "\n",
-    "        time_slots_df = U.get_df_time_slots(df, freq=self._FREQ, next_days_num=self._NEXT_DAYS_NUM)\n",
-    "        next_events_df = self.get_next_events(filter_by)\n",
-    "        df = time_slots_df.merge(next_events_df, how='left', indicator=True)\n",
-    "        df['start_time'] = df['start_time'].mask(df.pop('_merge').eq('both'))\n",
-    "        return df[df['start_time'].notnull()].loc[:, ['start_time']]\n",
-    "\n",
-    "    def set_department_free_slots_list(self):\n",
-    "        self.department_free_slots_list = self.department_free_slots_df['start_time'].tolist()\n",
-    "\n",
-    "    def get_contact_availability(self, contact_id):\n",
-    "        \"\"\"\n",
-    "        The function get contact_id and return available time for contact_id\n",
-    "        \"\"\"\n",
-    "        try:\n",
-    "            contact_free_slots = self.get_free_slots(Contact, contact_id)\n",
-    "        except Exception as e:\n",
-    "            return False\n",
-    "\n",
-    "        contact_free_slots = contact_free_slots['start_time'].tolist()\n",
-    "        # department_free_slots_list = self.department_free_slots['start_time'].tolist()\n",
-    "        # time_slot = self.department_free_slots_list[0]\n",
-    "        for contact_time in contact_free_slots:\n",
-    "            if (contact_time in self.department_free_slots_list):\n",
-    "                return contact_time\n",
-    "        return False\n",
-    "\n",
-    "    def generate_events(self):\n",
-    "        self.set_department_free_slots_list()\n",
-    "        patients = self.patients\n",
-    "        \"\"\"\n",
-    "        The function get department and return events for the next 7 days for each contact of patients in department\n",
-    "        \"\"\"\n",
-    "        for patient_id, row in patients.iterrows():\n",
-    "\n",
-    "            contact_id = patients.loc[patient_id, [\"contact_id\"]][0]\n",
-    "            time = self.get_contact_availability(contact_id)\n",
-    "\n",
-    "            if (time):\n",
-    "                print(\"Patient id: \", row['patient_id'], \" contact_id: \", contact_id, \"time:\", time)\n",
-    "                self.department_free_slots_list.remove(time)\n",
-    "                try:\n",
-    "                    E.create_new_event(time, row['patient_id'], contact_id)\n",
-    "                except Exception as e:\n",
-    "                    # raise Exception(\"Error in create_event\", e)\n",
-    "                    pass\n",
-    "            else:\n",
-    "                print(\"Contact have no optional meet time\")\n",
-    "\n",
-    "d = Department(1)\n",
-    "# df = d.get_next_events(filter_by={\"patient_id\":\"100001\"})\n",
-    "d.session"
+    "d.genext_events()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "2"
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df.patient_id ==100001,['max_calls']].values[0][0]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                                                             url  contact_id  \\\nevent_id                                                                       \n9u3lonton3o5b1qqfn06omk5s4  https://meet.google.com/tiw-irwk-ewd          15   \nbk2qp0merg4oaoae698ctpon7s  https://meet.google.com/nob-jufy-zmo          16   \nr9cu7vdlqupq0h26r9c5q0s2ms  https://meet.google.com/vnh-hhdg-jcf          16   \n\n                            patient_id  department_id          start_time  \\\nevent_id                                                                    \n9u3lonton3o5b1qqfn06omk5s4      100001            NaN 2022-09-22 10:00:00   \nbk2qp0merg4oaoae698ctpon7s      100001            1.0 2022-09-20 09:00:00   \nr9cu7vdlqupq0h26r9c5q0s2ms      100001            1.0 2022-09-18 10:00:00   \n\n                            status    row_created_time  \nevent_id                                                \n9u3lonton3o5b1qqfn06omk5s4       2 2022-09-18 13:14:55  \nbk2qp0merg4oaoae698ctpon7s       2 2022-09-17 17:43:11  \nr9cu7vdlqupq0h26r9c5q0s2ms       2 2022-09-13 22:19:09  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>url</th>\n      <th>contact_id</th>\n      <th>patient_id</th>\n      <th>department_id</th>\n      <th>start_time</th>\n      <th>status</th>\n      <th>row_created_time</th>\n    </tr>\n    <tr>\n      <th>event_id</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>9u3lonton3o5b1qqfn06omk5s4</th>\n      <td>https://meet.google.com/tiw-irwk-ewd</td>\n      <td>15</td>\n      <td>100001</td>\n      <td>NaN</td>\n      <td>2022-09-22 10:00:00</td>\n      <td>2</td>\n      <td>2022-09-18 13:14:55</td>\n    </tr>\n    <tr>\n      <th>bk2qp0merg4oaoae698ctpon7s</th>\n      <td>https://meet.google.com/nob-jufy-zmo</td>\n      <td>16</td>\n      <td>100001</td>\n      <td>1.0</td>\n      <td>2022-09-20 09:00:00</td>\n      <td>2</td>\n      <td>2022-09-17 17:43:11</td>\n    </tr>\n    <tr>\n      <th>r9cu7vdlqupq0h26r9c5q0s2ms</th>\n      <td>https://meet.google.com/vnh-hhdg-jcf</td>\n      <td>16</td>\n      <td>100001</td>\n      <td>1.0</td>\n      <td>2022-09-18 10:00:00</td>\n      <td>2</td>\n      <td>2022-09-13 22:19:09</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = d.get_next_events(filter_by={\"patient_id\":\"100001\",\"status\":2})\n",
+    "df"
    ],
    "metadata": {
     "collapsed": false,
