Change footer, change refrence for buttons at the side left bar menu and add temi functions to events routs before Demo

--- a/apps/core/add_rows_to_db.ipynb
+++ b/apps/core/add_rows_to_db.ipynb
@@ -2421,22 +2421,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 66,
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Department' object has no attribute 'genext_events'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [48]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43md\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mgenext_events\u001B[49m()\n",
-      "\u001B[1;31mAttributeError\u001B[0m: 'Department' object has no attribute 'genext_events'"
-     ]
+     "data": {
+      "text/plain": "datetime.datetime(2022, 9, 18, 21, 53)"
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "d.genext_events()"
+    "import datetime\n",
+    "# type(datetime.datetime.now().isoformat())\n",
+    "# datetime.strptime(datetime.datetime.now(),\"%Y-%m-%d %H:%M:%S\")\n",
+    "\n",
+    "time_format = '%Y-%m-%d %H:%M'\n",
+    "datetime.datetime.strptime(datetime.datetime.now().strftime(time_format), time_format)"
    ],
    "metadata": {
     "collapsed": false,
