add attendens to google calaner events and version of class presentation

--- a/apps/core/add_rows_to_db.ipynb
+++ b/apps/core/add_rows_to_db.ipynb
@@ -2421,24 +2421,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
+   "outputs": [],
+   "source": [
+    "event = {\n",
+    "        'summary': '',\n",
+    "        'location': '',\n",
+    "        'description': '',\n",
+    "        'start': {\n",
+    "            'dateTime': '2022-09-11T08:00:00+03:00',\n",
+    "        },\n",
+    "        'end': {\n",
+    "            'dateTime': '2022-09-11T11:00:00+03:00',\n",
+    "        },\n",
+    "        'attendees': [\n",
+    "            {'email': 'lpage@example.com'},\n",
+    "        ],\n",
+    "        \"conferenceData\": {\n",
+    "            \"createRequest\": {\n",
+    "                \"conferenceSolutionKey\": {\n",
+    "                    \"type\": \"hangoutsMeet\"\n",
+    "                },\n",
+    "                \"requestId\": \"RandomString\"\n",
+    "            }\n",
+    "        },\n",
+    "        'reminders': {\n",
+    "            'useDefault': False,\n",
+    "            'overrides': [\n",
+    "                {'method': 'email', 'minutes': 24 * 60},\n",
+    "                {'method': 'popup', 'minutes': 10},\n",
+    "            ],\n",
+    "        },\n",
+    "    }\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "outputs": [
     {
      "data": {
-      "text/plain": "datetime.datetime(2022, 9, 18, 21, 53)"
+      "text/plain": "'lpage@example.com'"
      },
-     "execution_count": 66,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import datetime\n",
-    "# type(datetime.datetime.now().isoformat())\n",
-    "# datetime.strptime(datetime.datetime.now(),\"%Y-%m-%d %H:%M:%S\")\n",
-    "\n",
-    "time_format = '%Y-%m-%d %H:%M'\n",
-    "datetime.datetime.strptime(datetime.datetime.now().strftime(time_format), time_format)"
+    "event['attendees'][0]['email'] ="
    ],
    "metadata": {
     "collapsed": false,
